# cs399

./: CS399-Syllabus.docx  README.MD  functions.idr  timeline.html
assignments/concurrency/: Main.hs  README.MD  concurrency.cabal  concurrency.nix  default.nix  shell.nix
assignments/concurrency/CS399/: Bots.hs  Game.hs
assignments/statemachine/: Main.hs  README.MD  default.nix  shell.nix  statemachine.cabal  statemachine.nix
notes/: eithers.idr  group.idr  io.idr  states.idr  writer.idr
project-1/digipen/instructor/conway/: impl.idr  input.idr  spec.idr
project-2/: classes.json
project-2/etc/: tests.yaml  valgrind.suppress.idris_leak
project-2/etc/bonus1/: classes.json
project-2/etc/bonus2/: teachers.json
project-2/etc/pass0/: classes.json  teachers.json
project-2/etc/xfail1/: teachers.json
project-2/etc/xfail2/: classes.json  teachers.json
project-2/etc/xfail3/: students.json
project-2/etc/xfail4/: students.json
project-2/etc/xfail5/: classes.json  students.json  teachers.json
project-2/phase-1/: data.idr  index.html  students.json  teachers.json
project-2/phase-1/digipen/: errors.idr  expect.idr  sample.idr
project-3/: README.MD
project-3/gl-idris/: gl.ipkg  glewinfo.txt
project-3/gl-idris/example/hello-world/: Main.idr  test.ipkg
project-3/gl-idris/src/: MakefileGl  gl_idris.c
project-3/gl-idris/src/Effect/: Gl.idr
project-3/gl-idris/src/Graphics/Rendering/: Config.idr  Gl.idr
project-3/glfw-idris/: glfw.ipkg
project-3/project-3/: Main.idr  project.ipkg
slides/: 0-intro.html
slides/css/: main.css
(+2 files in other folders)
